--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "babel-runtime": "^6.0.0",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "fast-click": "^1.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
