--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-runtime": "^6.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
-    "fast-click": "^1.0.6"
+    "fastclick": "^1.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
