--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1",
+    "vue-router": "^2.5.3",
+    "vuex": "^2.3.1",
     "fastclick": "^1.0.6",
-    "jsonp": "^0.2.1"
+    "vue-lazyload": "1.0.3",
+    "axios": "^0.16.1",
+    "jsonp": "0.2.1",
+    "better-scroll": "^0.1.15",
+    "create-keyframe-animation": "^0.1.0",
+    "js-base64": "^2.1.9",
+    "lyric-parser": "^1.0.1",
+    "good-storage": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -53,10 +61,10 @@
     "ora": "^1.2.0",
     "rimraf": "^2.6.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^11.3.4",
+    "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
+    "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0",
